# Ivich_desktopPet

./: .gitignore  README.md  pyproject.toml  美术.md  美术_next.md  美术prompt.md
assets/: README.md
assets/config/: animation.json  settings.json  state.json
docs/superpowers/plans/: 2026-05-19-python-qt-desktop-pet.md
docs/superpowers/specs/: 2026-05-19-python-qt-desktop-pet-design.md
src/desktop_pet/: __init__.py  __main__.py  animation_cache.py  app.py  config.py  interaction.py  sprites.py  state.py  walk.py  window.py
tests/: test_animation_cache.py  test_app.py  test_config.py  test_sprites.py  test_state.py  test_walk.py  test_window.py
