[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop-pet"
version = "0.1.0"
description = "A Windows-first PySide6 desktop pet that plays PNG sequence animations."
readme = "assets/README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
desktop-pet = "desktop_pet.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
